hmacsha512 #3 - signature implementation - added sign swagger docs
